--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>I can push to github</h1>
+  <h1>I can push to github.com</h1>
   <h2>Mama I can code now</h2>
   <h3>New code changed</h3>
   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis, cumque!</p>
   <p>The code changed 2times.</p>
+  <img src="me2.jpeg" alt="Me" width="300">
 </body>
 </html>
