new image added

--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veritatis, cumque!</p>
   <p>The code changed 2times.</p>
   <img src="me2.jpeg" alt="Me" width="300">
+  <img src="me.jpg" alt="Me" width="300">
+  <img src="images/myPic.jpg" alt="Me" width="300">
 </body>
 </html>
